--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Davis Loves Veronica</h1>
         <img src="veronicaanddavis.jpeg" alt="Anniversary Celebration" style="width: 100%; max-width: 300px; height: auto;">
         <p>Choose your adventure!</p>
-        <a href="https://example.com/mexico-city" target="_blank">Trip Option 1: Mexico City</a>
-        <a href="https://example.com/arizona" target="_blank">Trip Option 2: Arizona</a>
+        <a href="mexico.html" target="_blank">Trip Option 1: Mexico City</a>
+        <a href="arizona.html" target="_blank">Trip Option 2: Arizona</a>
     </div>
     </div>
 </body>
