--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container">
         <h1>Davis Loves Veronica</h1>
         <img src="veronicaanddavis.jpeg" alt="Anniversary Celebration" style="width: 100%; max-width: 300px; height: auto;">
+        <p>Dear Veronica,</p>
+        <p>I'm not the best with cards, so instead, I decided to make you a website! I thnk you are the most brilliant and beautiful girl in the whole wide world, and I couldn't be happier to have spent the last four years with you and many more to come. With that being said...</p>
         <p>Choose your adventure!</p>
         <a href="mexico.html" target="_blank">Trip Option 1: Mexico City</a>
         <a href="arizona.html" target="_blank">Trip Option 2: Arizona</a>
